[3.7] bpo-43660: Fix crash when displaying exceptions with custom values for sys.stderr (GH-25075). (cherry picked from commit 09b90a037d18f5d4acdf1b14082e57bda78e85d3)

Co-authored-by: Pablo Galindo <Pablogsal@gmail.com>